ingress_resource.yml
#https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml [To configure ingress on Kubernetes]
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /adservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: adservice
            port:
              number: 9555
      - path: /cartservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: cartservice
            port:
              number: 7070
      - path: /checkoutservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: checkoutservice
            port:
              number: 5050
      - path: /currencyservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: currencyservice
            port:
              number: 7000
      - path: /emailservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: emailservice
            port:
              number: 8000
      - path: /frontend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - path: /paymentservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: paymentservice
            port:
              number: 50051
      - path: /productcatalogservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: productcatalogservice
            port:
              number: 3550
      - path: /recommendationservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: recommendationservice
            port:
              number: 8080
      - path: /redis-cart(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: redis-cart
            port:
              number: 6379
      - path: /shippingservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: shippingservice
            port:
              number: 50051
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
